--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,13 @@
   padding: 0;
   box-sizing:border-box;
 }
+
+/* header */
+.header {
+ background-color: #edf2f6;
+ text-align: center;
+}
+
+.toboolist-logo {
+  width: 200px;
+}
